# ukui-theme-customizer

./: .gitignore  CMakeLists.txt  README  README.md  UKUIThemeCustomizer.kdev4
src/: iniThemeTemplate.qrc  main.cpp  ukuithemecustomizer.cpp  ukuithemecustomizer.h  ukuithemecustomizer.ui  ukuithemeelement.cpp  ukuithemeelement.h
src/globalthemecreator/: CMakeLists.txt  globalthemecreator.cpp  globalthemecreator.h  globalthemecreator.ui
src/logger/: CMakeLists.txt  logger.cpp  logger.h
src/packagecreator/: .packagecreator.h.kate-swp  CMakeLists.txt  packagecreator.cpp  packagecreator.h  packagecreator.ui
src/settingmanager/: CMakeLists.txt  settingmanager.cpp  settingmanager.h
src/templates/: control
src/templates/cursor/: postinst  prerm
src/templates/icon/: postinst  postrm
src/ukuithemecustomizerwindow/: .ukuithemecustomizerwindow.cpp.kate-swp  CMakeLists.txt  ukuithemecustomizerwindow.cpp  ukuithemecustomizerwindow.h  ukuithemecustomizerwindow.ui
src/ukuithemeelement/: CMakeLists.txt  ukuithemeelement.cpp  ukuithemeelement.h
